--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,9 +3,9 @@ owner: Lwnlcks # Your GitHub organization or username, where this repository liv
 repo: namgall-status # The name of this repository
 
 sites:
-  - name: namuwiki gall
+  - name: namuwiki-gall
     url: https://gall.dcinside.com/mgallery/board/lists?id=namuwiki
-  - name: namgall wiki
+  - name: namgall-wiki
     url: https://namgall.wikiing.in/
     
 status-website:
