--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -18,10 +18,10 @@ status-website:
   introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
   introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
   navbar:
-    - title: Status
-      href: /
-    - title: GitHub
-      href: https://github.com/$OWNER/$REPO
+    - title: 남갤
+      href: https://gall.dcinside.com/mgallery/board/lists?id=namuwiki
+    - title: 남갤위키
+      href: https://namgall.wikiing.in/
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
